--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://moeez404.github.io/just-vibes",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
